2006-10-20  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.cni/cni.exp (gcj_cni_build_headers): Don't use
	jv-scan.
	* testsuite/lib/libjava.exp (test_libjava_from_javac): Removed.
	(find_jvscan): Removed.

2006-10-20  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.jni/jni.exp (gcj_jni_build_header): Use
	-force.
	* testsuite/lib/libjava.exp (find_gcjh): Find 'gjavah' instead.
	* testsuite/libjava.cni/cni.exp (gcj_cni_build_headers): Pass -cni
	and -force to gcjh.
	* Makefile.in: Rebuilt.
	* Makefile.am (MYGCJH): Use gjavah.

2006-10-18  Tom Tromey  <tromey@redhat.com>

	PR classpath/28203:
	* java/lang/Class.java (getAnnotations): Rewrote.
	* java/lang/reflect/Method.java (METHOD_MODIFIERS): Now
	package-private.
	* java/lang/reflect/Field.java (FIELD_MODIFIERS): Now
	package-private.
	* gcj/field.h (_Jv_FIELD_CONSTANT_VALUE): Removed.
	* defineclass.cc (handleConstantValueAttribute): Added found_value
	argument.  Don't use _Jv_FIELD_CONSTANT_VALUE.
	(read_one_field_attribute): Updated.
	(read_fields): Likewise.
	(handleField): Mask with FIELD_MODIFIERS, not ALL_FLAGS.
	(handleMethod): Mask with METHOD_MODIFIERS, not ALL_FLAGS.

2006-10-17  Tom Tromey  <tromey@redhat.com>

	* defineclass.cc (handleMemberAnnotations): Write member index
	after 'kind'.
	(handleAnnotation): Call prepare_pool_entry.
	* java/lang/reflect/natMethod.cc (getDeclaredAnnotationsInternal):
	Removed unused variable.
	(getParameterAnnotationsInternal): Likewise.
	* java/lang/reflect/natField.cc (getDeclaredAnnotationsInternal):
	Removed unused variable.
	* java/lang/reflect/natConstructor.cc
	(getDeclaredAnnotationsInternal): Removed unused variable.
	(getParameterAnnotationsInternal): Likewise.
	* java/lang/natClass.cc (parseAnnotation): Create annotation.
	(parseAnnotationElement): Handle 'c' and 'e' cases more
	correctly.
	(getMethodDefaultValue): Fixed variable names.
	(parseAnnotationElement): Create String for 's' entry.