@@ -1,8 +1,7 @@
-A initialized
 false
-B initialized
 false
 true
-C initialized
+A initialized
 false
+C initialized
 true
